samples/_failures_safe/1761219966_25b1ae_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_af77507f.c:188:1: error: expected identifier or ‘(’ at end of input
  188 | void
      | ^~~~
